Implemented Member Dashboard Content, Reworked button styles, modified dashboard styling.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@
   --color-gradient-purple: #834385;
   --color-gradient-red: #B13454;
   --color-icon-purple: #667EEA;
+  --color-page-background: #F0F0F0;
 }
 
 @theme inline {
@@ -55,7 +56,8 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: oklch(100% 0.00011 271.152);
+  --color-page-background: oklch(95.514% 0.00011 271.152);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -91,6 +93,7 @@
 
 .dark {
   --background: oklch(0.145 0 0);
+  --color-page-background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
