--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -182,3 +182,17 @@
   --tw-prose-invert-th-borders: var(--color-border);
   --tw-prose-invert-td-borders: var(--color-border);
 }
+
+
+.shadow-s {
+  box-shadow: inset 0 1px 2px #ffffff30, /* top highlight */ 0 1px 2px #00000030,
+  /* dark shadow */ 0 2px 4px #00000015;
+}
+.shadow-m {
+  box-shadow: inset 0 1px 2px #ffffff50, /* top highlight */ 0 2px 4px #00000030,
+  /* dark shadow */ 0 4px 8px #00000015 ;
+}
+.shadow-l {
+  box-shadow: inset 0 1px 2px #ffffff70, /* top highlight */ 0 4px 6px #00000030,
+  /* dark shadow */ 0 6px 10px #00000015; 
+}
