--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,6 +54,9 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 
+
+  --shadow-glass: inset 0 1px 2px #ffffff50, /* top highlight */ 0 2px 4px #00000030,
+  /* dark shadow */ 0 4px 8px #00000015 ;
   
 }
 
